@@ -1,3 +1,11 @@
+2012-05-16  Richard Henderson  <rth@redhat.com>
+
+	PR debug/52727
+	* combine-stack-adj.c (prev_active_insn_bb): New.
+	(next_active_insn_bb): New.
+	(force_move_args_size_note): New.
+	(combine_stack_adjustments_for_block): Use it.
+
 2012-05-16  Olivier Hainque  <hainque@adacore.com>
 
 	* Makefile.in (install-no-fixedincludes): New target, former toplevel
